@@ -637,12 +637,12 @@ public class DruidCoordinatorTest
         Collections.singleton(dataSegment)
     );
     EasyMock
-        .expect(segmentsMetadataManager.getSnapshotOfDataSourcesWithAllUsedSegments())
+        .expect(segmentsMetadataManager.getDataSourceSnapshot())
         .andReturn(dataSourcesSnapshot)
         .anyTimes();
     EasyMock.expect(segmentsMetadataManager.isPollingDatabasePeriodically()).andReturn(true).anyTimes();
-    EasyMock.expect(segmentsMetadataManager.iterateAllUsedSegments())
-            .andReturn(Collections.singletonList(dataSegment)).anyTimes();
+    EasyMock.expect(segmentsMetadataManager.getDataSourceSnapshot())
+            .andReturn(DataSourcesSnapshot.fromUsedSegments(List.of(dataSegment))).anyTimes();
     EasyMock.expect(serverInventoryView.isStarted()).andReturn(true).anyTimes();
     EasyMock.expect(serverInventoryView.getInventory()).andReturn(Collections.emptyList()).anyTimes();
     EasyMock.replay(serverInventoryView, loadQueueTaskMaster, segmentsMetadataManager);
@@ -816,7 +816,7 @@ public class DruidCoordinatorTest
   {
     DataSourcesSnapshot dataSourcesSnapshot = DataSourcesSnapshot.fromUsedSegments(Collections.emptyList());
     EasyMock
-        .expect(segmentsMetadataManager.getSnapshotOfDataSourcesWithAllUsedSegments())
+        .expect(segmentsMetadataManager.getDataSourceSnapshot())
         .andReturn(dataSourcesSnapshot)
         .anyTimes();
     EasyMock.replay(segmentsMetadataManager);
@@ -829,18 +829,10 @@ public class DruidCoordinatorTest
   private void setupSegmentsMetadataMock(DruidDataSource dataSource)
   {
     EasyMock.expect(segmentsMetadataManager.isPollingDatabasePeriodically()).andReturn(true).anyTimes();
-    EasyMock
-        .expect(segmentsMetadataManager.iterateAllUsedSegments())
-        .andReturn(dataSource.getSegments())
-        .anyTimes();
-    EasyMock
-        .expect(segmentsMetadataManager.getImmutableDataSourcesWithAllUsedSegments())
-        .andReturn(Collections.singleton(dataSource.toImmutableDruidDataSource()))
-        .anyTimes();
     DataSourcesSnapshot dataSourcesSnapshot =
         DataSourcesSnapshot.fromUsedSegments(dataSource.getSegments());
     EasyMock
-        .expect(segmentsMetadataManager.getSnapshotOfDataSourcesWithAllUsedSegments())
+        .expect(segmentsMetadataManager.getDataSourceSnapshot())
         .andReturn(dataSourcesSnapshot)
         .anyTimes();
     EasyMock
